# fire-segmentation

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  segmentation.py
doc/: Отчет.docx
train/: prediction.py
utils/: landsat_downloader.py  process.py  show.py
