[tool.poetry]
name = "fire"
version = "0.1.0"
description = ""
authors = ["Ivanchenko Aleksei <amivanchenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
tensorflow-gpu = "2.10.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
segmentation-models = "^1.0.1"
keras-tuner = "^1.3.0"
tensorflow-addons = "^0.19.0"
rasterio = "^1.3.6"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"
notebook = "^6.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
